tests/conformance/fail/borrow/use_after_move.ny
fn consume(s: string) -> void {
    print(s)
}

fn main() {
    let msg = "moved"
    consume(msg)
    print(msg)
}
